# unitree_go2_quadruped_slam

./: .gitignore  .gitmodules
docker/: Dockerfile  docker_build.sh  docker_run.sh
go2_slam_ws/src/go2_nav2/: package.xml  setup.py
go2_slam_ws/src/go2_rtabmap_slam/: package.xml  setup.cfg  setup.py
go2_slam_ws/src/go2_rtabmap_slam/go2_rtabmap_slam/: unitree_odom_to_tf.py
go2_slam_ws/src/go2_rtabmap_slam/launch/: go2_rtabmap.launch.py  hesai_lidar_slam.launch.py
go2_slam_ws/src/go2_slam/: CMakeLists.txt  package.xml
go2_slam_ws/src/go2_slam/config/: cyclonedds.xml  hesai_xt16.yaml
go2_slam_ws/src/go2_slam/launch/: slam_hesai.launch.py  slam_hesai_realsense.launch.py  slam_l1.launch.py
scripts/: hesai_test.sh  l1_record_bag.sh
scripts/python_scripts/: teleop.py
scripts/shell_scripts/: hesai_driver.sh  hesai_kiss_icp_test.sh  hesai_kiss_slam.sh  hesai_slam_teleop.sh  hesai_test.sh  kiss_slam.sh  l1_only_test.sh  launch_kiss_slam.sh
