<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_rtabmap_slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="brianchien04172@gmail.com">bchien12</maintainer>
  <license>Apache-2.0</license>

  <depend>rtabmap_launch</depend>
  <depend>rtabmap_viz</depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
